syntax = "proto3";

package api;

message TransactionStatusRequest {
    string Address = 1;
    string Hash = 2;
}

message TransactionStatusResponse {
    TransactionStatus Status = 1;

    enum TransactionStatus {
        Pending = 0;
        Success = 1;
        Failure = 2;
        Unknown = 3;
    }
}



message ContractStateRequest {
    string ContractAddress = 1;
}

message ContractStateResponse {
    string Data = 1;
    string Signature = 2;
}
